--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "https": "^1.0.0",
+    "mongodb": "^6.1.0",
+    "mysql2": "^3.6.1",
+    "streamifier": "^0.1.1"
   }
 }
