--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "https": "^1.0.0",
+    "jimp": "^0.22.10",
+    "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "mysql2": "^3.6.1",
+    "onnxruntime-node": "^1.16.0",
     "streamifier": "^0.1.1"
   }
 }
